--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
+    "semantic-ui-calendar-react": "^0.15.3",
     "semantic-ui-react": "^0.88.1"
   },
   "scripts": {
